optimize import