@@ -1,15 +1,17 @@
 package cybersoft.javabackend.java16giragv.common.util;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+import lombok.experimental.UtilityClass;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.validation.BindingResult;
 
+import java.util.List;
+
+@UtilityClass
 public class ErrorHelper {
-	public static List<String> getAllError(BindingResult result){
-		return result.getAllErrors()
-					.stream()
-					.map(t -> t.getDefaultMessage())
-					.collect(Collectors.toList());
-	}
+    public static List<String> getAllError(BindingResult result) {
+        return result.getAllErrors()
+                .stream()
+                .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                .toList();
+    }
 }
